maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:27: error: not found: value largeurDepart
  if(aMurNord(largeurDepart,hauteurDepart)== false)
              ^ShortestPathMaze:27: error: not found: value hauteurDepart
  if(aMurNord(largeurDepart,hauteurDepart)== false)
                            ^ShortestPathMaze:29: error: not found: value compteur
      setIndication(a,b,compteur+1);
                        ^ShortestPathMaze:30: error: not found: value compteur
      compteur=compteur+1;
      ^ShortestPathMaze:32: error: not found: value largeurDepart
  if(aMurOuest(largeurDepart,hauteurDepart)== false)
               ^ShortestPathMaze:32: error: not found: value hauteurDepart
  if(aMurOuest(largeurDepart,hauteurDepart)== false)
                             ^ShortestPathMaze:34: error: not found: value compteur
        setIndication(a,b,compteur+1);
                          ^ShortestPathMaze:35: error: not found: value compteur
        compteur=compteur+1;
        ^